--- a/www/index.html
+++ b/www/index.html
@@ -14,10 +14,13 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/rsvp/rsvp.min.js"></script>
 
     <!-- firebase & angularfire libraries -->
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/geofire/dist/geofire.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
