--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
     <script src="lib/geofire/dist/geofire.min.js"></script>
 
+    <!-- used to access phone's photogallery -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
