Mork work on pretty profiles

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,10 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/rsvp/rsvp.min.js"></script>
 
+    <!-- used for carousel view -->
+    <script src="lib/angular-touch/angular-touch.js"></script>
+    <script src="lib/angular-carousel/dist/angular-carousel.js"></script>
+
     <!-- firebase & angularfire libraries -->
     <script src="lib/firebase/firebase.js"></script>
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
