--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,15 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- init app -->
     <script src="js/app.js"></script>
+
+    <!-- controllers -->
     <script src="js/controllers.js"></script>
+    <script src="js/Controllers/authentication.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
+
+    <!-- services -->
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
