--- a/www/index.html
+++ b/www/index.html
@@ -39,8 +39,7 @@
     <script src="js/Controllers/friends.request.controller.js"></script>
     <script src="js/Controllers/messages.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
-
-    <!-- services -->
+    <script src="js/Controllers/events.controller.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
