--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <!-- controllers -->
     <script src="js/controllers.js"></script>
     <script src="js/Controllers/authentication.controller.js"></script>
+    <script src="js/Controllers/chat.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
 
     <!-- services -->
