--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="js/Controllers/messages.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
     <script src="js/Controllers/events.controller.js"></script>
+    <script src="js/Controllers/createEvents.controller.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
