refactor friends request

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <script src="js/Controllers/authentication.controller.js"></script>
     <script src="js/Controllers/chat.controller.js"></script>
     <script src="js/Controllers/friends.controller.js"></script>
+    <script src="js/Controllers/friends.request.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
 
     <!-- services -->
