refactor messages controller

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
     <script src="js/Controllers/chat.controller.js"></script>
     <script src="js/Controllers/friends.controller.js"></script>
     <script src="js/Controllers/friends.request.controller.js"></script>
+    <script src="js/Controllers/messages.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
 
     <!-- services -->
