--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
     <script src="js/Controllers/search.controller.js"></script>
     <script src="js/Controllers/events.controller.js"></script>
     <script src="js/Controllers/createEvents.controller.js"></script>
+    <script src="js/Controllers/settings.controller.js"></script>
+
+    <!-- services -->
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
