--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
     <script src="js/Controllers/events.controller.js"></script>
     <script src="js/Controllers/createEvents.controller.js"></script>
     <script src="js/Controllers/settings.controller.js"></script>
-
+    <script src="js/Controllers/viewEvent.controller.js"></script>
     <!-- services -->
     <script src="js/services.js"></script>
     <script src="js/Services/authentication.service.js"></script>
