--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
 
     <!-- services -->
     <script src="js/services.js"></script>
+    <script src="js/Services/gps.service.js"></script>
   </head>
   <body ng-app="starter">
     <!--
