--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
     <script src="js/services.js"></script>
     <script src="js/Services/authentication.service.js"></script>
     <script src="js/Services/gps.service.js"></script>
+    <script src="js/Services/image.service.js"></script>
   </head>
   <body ng-app="starter">
     <!--
