--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/slick-carousel/slick/slick.css">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -27,6 +28,10 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <script src='lib/jquery/dist/jquery.js'></script>
+    <script src="lib/slick-carousel/slick/slick.js"></script>
+    <script src="lib/angular-slick/dist/slick.js"></script>
 
     <!-- init app -->
     <script src="js/app.js"></script>
