--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,10 @@
     <!-- init app -->
     <script src="js/app.js"></script>
 
+    <!-- routings -->
+    <script src="js/Routings/tab.routing.js"></script>
+    <script src="js/Routings/tab.search.routing.js"></script>
+
     <!-- controllers -->
     <script src="js/controllers.js"></script>
     <script src="js/Controllers/authentication.controller.js"></script>
@@ -48,6 +52,8 @@
     <script src="js/Services/authentication.service.js"></script>
     <script src="js/Services/gps.service.js"></script>
     <script src="js/Services/image.service.js"></script>
+
+
   </head>
   <body ng-app="starter">
     <!--
