put user services in a file

--- a/www/index.html
+++ b/www/index.html
@@ -39,19 +39,20 @@
     <script src="js/controllers.js"></script>
     <script src="js/Controllers/authentication.controller.js"></script>
     <script src="js/Controllers/chat.controller.js"></script>
+    <script src="js/Controllers/events.controller.js"></script>
+    <script src="js/Controllers/events.create.controller.js"></script>
+    <script src="js/Controllers/events.view.controller.js"></script>
     <script src="js/Controllers/friends.controller.js"></script>
     <script src="js/Controllers/friends.request.controller.js"></script>
     <script src="js/Controllers/messages.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
-    <script src="js/Controllers/events.controller.js"></script>
-    <script src="js/Controllers/events.create.controller.js"></script>
-    <script src="js/Controllers/events.view.controller.js"></script>
     <script src="js/Controllers/settings.controller.js"></script>
     <!-- services -->
     <script src="js/services.js"></script>
     <script src="js/Services/authentication.service.js"></script>
     <script src="js/Services/gps.service.js"></script>
     <script src="js/Services/image.service.js"></script>
+    <script src="js/Services/user.service.js"></script>
 
 
   </head>
