--- a/www/index.html
+++ b/www/index.html
@@ -44,9 +44,9 @@
     <script src="js/Controllers/messages.controller.js"></script>
     <script src="js/Controllers/search.controller.js"></script>
     <script src="js/Controllers/events.controller.js"></script>
-    <script src="js/Controllers/createEvents.controller.js"></script>
+    <script src="js/Controllers/events.create.controller.js"></script>
+    <script src="js/Controllers/events.view.controller.js"></script>
     <script src="js/Controllers/settings.controller.js"></script>
-    <script src="js/Controllers/viewEvent.controller.js"></script>
     <!-- services -->
     <script src="js/services.js"></script>
     <script src="js/Services/authentication.service.js"></script>
