--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="js/Controllers/events.controller.js"></script>
     <script src="js/Controllers/events.create.controller.js"></script>
     <script src="js/Controllers/events.view.controller.js"></script>
+    <script src="js/Controllers/events.group.controller.js"></script>
     <script src="js/Controllers/friends.controller.js"></script>
     <script src="js/Controllers/friends.request.controller.js"></script>
     <script src="js/Controllers/messages.controller.js"></script>
