--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,10 @@
     <script src="lib/angularfire/dist/angularfire.min.js"></script>
     <script src="lib/geofire/dist/geofire.min.js"></script>
 
-    <!-- used to access phone's photogallery -->
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <!-- Testing -->
+    <script src="lib/mocha/mocha.js"></script>
+    <script src="lib/chai/chai.js"></script>
+    <script src="lib/karma/lib/karma.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
