Refactor friends list with a service

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
     <script src="js/Services/image.service.js"></script>
     <script src="js/Services/user.service.js"></script>
     <script src="js/Services/events.service.js"></script>
+    <script src="js/Services/friend.service.js"></script>
 
 
   </head>
