--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
     <!-- services -->
     <script src="js/services.js"></script>
     <script src="js/Services/authentication.service.js"></script>
+    <script src="js/Services/chat.service.js"></script>
     <script src="js/Services/gps.service.js"></script>
     <script src="js/Services/image.service.js"></script>
     <script src="js/Services/user.service.js"></script>
